Creacion de conexion a la base de datos y context. Inyeccion por dependencia

--- a/L02P02_2022-CA-652_2022-SU-650/appsettings.json
+++ b/L02P02_2022-CA-652_2022-SU-650/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "libreriaDbConnection": "Data Source = LAPTOP-IIDH7I3K\\SQLEXPRESS; Initial Catalog = libreriaDb; User Id = sa; Password = 11deportivo; Connect Timeout = 120; Encrypt = False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
