--- a/L02P02_2022-CA-652_2022-SU-650/L02P02_2022-CA-652_2022-SU-650.csproj
+++ b/L02P02_2022-CA-652_2022-SU-650/L02P02_2022-CA-652_2022-SU-650.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>L02P02_2022_CA_652_2022_SU_650</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+  </ItemGroup>
+
 </Project>
